@@ -1,6 +1,8 @@
 Important changes from 1.7.2 => 1.7.3
 ============================================================
 Round icons are now in the token table just like the round descriptions
+Automatic email:
+    Mail jobs are now executed in batch, one job at a time
 
 Important changes from 1.7.1 => 1.7.2
 ============================================================
